# ScanProcessor

./: .gitignore  CMakeLists.txt  README.md  argparse.h  common.h  config_file.json  main.cpp
ScanIO/: ScanIO.cpp  ScanIO.h
ScanProcess/: ScanProcess.cpp  ScanProcess.h
User/: User.cpp  User.h
VoxelGrid/: CustomVoxelGrid.cpp  CustomVoxelGrid.h
